CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)

# Global vars
set (CMAKE_CXX_STANDARD 11)
SET(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_PROJECT_NAME "cpp_algorithms")
SET(EXECUTABLE_NAME "cpp_algorithms")

SET(EXECUTABLE_VERSION_MAJOR "1")
SET(EXECUTABLE_VERSION_MINOR "0")
SET(EXECUTABLE_VERSION_PATCH "0")

SET(CMAKE_C_COMPILER "gcc-7" CACHE PATH "" FORCE)
SET(CMAKE_CXX_COMPILER "g++-7" CACHE PATH "" FORCE)

SET(CMAKE_MODULE_PATH
  ${CMAKE_SOURCE_DIR}/CMake/Modules
 )

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/)

#set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")

SET(EXECUTABLE_VERSION "${EXECUTABLE_VERSION_MAJOR}.${EXECUTABLE_VERSION_MINOR}.${EXECUTABLE_VERSION_PATCH}")

#SET(CMAKE_VERBOSE_MAKEFILE OFF)

set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -v")

SET(CMAKE_BUILD_TYPE Debug)

#Begin Project
PROJECT(${CMAKE_PROJECT_NAME})

MESSAGE(STATUS "Current built type: ${CMAKE_BUILD_TYPE}")
MESSAGE(STATUS "Current build type flags: ${CMAKE_CXX_FLAGS_${CMAKE_BUILD_TYPE}}")
MESSAGE(STATUS "Configuring application ${APPLICATION_NAME}")

set(CMAKE_MACOSX_RPATH 1)

#Main Binary
include_directories( src )

#Library
include_directories( lib )

include_directories( include )

include_directories( include/sorting )

FILE(GLOB SOURCES "src/*.cpp" "src/sorting/*.cpp")

ADD_EXECUTABLE(${EXECUTABLE_NAME} ${SOURCES})
